--- a/PostFetcher/PostFetcher.csproj
+++ b/PostFetcher/PostFetcher.csproj
@@ -64,7 +64,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataBase.cs" />
     <Compile Include="Handler\GenericSourceHandler.cs" />
     <Compile Include="Handler\IHandler.cs" />
     <Compile Include="Handler\ModelHandler.cs" />
@@ -73,6 +72,8 @@
     <Compile Include="Handler\Resume\E1ResumeHandler.cs" />
     <Compile Include="HtmlAgent\Agent.cs" />
     <Compile Include="HtmlAgent\DOMAgent.cs" />
+    <Compile Include="Model\DataBase.cs" />
+    <Compile Include="Model\Model.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -119,7 +120,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
