--- a/PostFetcher/PostFetcher.csproj
+++ b/PostFetcher/PostFetcher.csproj
@@ -74,6 +74,7 @@
     <Compile Include="HtmlAgent\DOMAgent.cs" />
     <Compile Include="Model\DataBase.cs" />
     <Compile Include="Model\Model.cs" />
+    <Compile Include="Model\Resume.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
